[package]
name = "flux"
version = "0.1.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2018"
default-run= "main"

[dependencies]
image = "0.22.4"
sdl2 = {version = "0.33", features = ["unsafe_textures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
num_cpus = "1.0"
fnv = "1.0"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "hmpaint"
path = "src/bin/hmpaint.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
